clang/test/BSC/Negative/Driver/rewrite-bsc/GenericBSCMethod/rewrite_generic_bscmethod_b/rewrite_generic_bscmethod_b.cbs
// RUN: %clang -rewrite-bsc %s -o %t-rw.c

#include "../rewrite_generic_bscmethod.hbs"

int f() {
  int res = struct MyStruct<int>::foo();
  return res - 2;  
}